fix: Improve certain button spacings

--- a/views/styles.css
+++ b/views/styles.css
@@ -449,6 +449,7 @@ hr.new-section {
   margin: 0 1em 2em 1em;
   display: flex;
   flex-direction: row;
+  gap: 1em;
 }
 
 #user-nav {
